<resources>
    <string name="app_name">Tasker</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="intro_actionbar_string">GREETING</string>
    <string name="intro_first_screen_text">Hello, my friend!\n My name is Tasker, i will be helping you, on your way to success</string>
    <string name="intro_matrix_description_iu">Important and urgent tasks, requiring your intervention. Solve them as quickly as possible and try to avoid their occurrence.</string>
    <string name="intro_matrix_description_i">Important and not urgent tasks, do them as soon as they appear. Try to focus on this section, do not allow theme to become ugren ones.</string>
    <string name="intro_matrix_description_u">Not important, but urgent tasks, this kind of task  can be solved sombody else. As a rule, these problems realize another’s goals. Try to dielegate theme.</string>
    <string name="intro_matrix_description_ninu">Not important and not urgent tasks. Little things stealing your time. Do these things in the last turn, or do not do at all. </string>
    <string name="intro_third_screen_quote">Quality is not an act, it\'s a habbit</string>
    <string name="intro_start_btn_text">Start</string>
    <string name="title_activity_tasks">@string/app_name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_logo">Tasker</string>
    <string name="nav_header_">Tasker</string>
    <string name="important_amp_urgent"><![CDATA[Important&Urgent]]></string>
    <string name="important">Important</string>
    <string name="urgent">Urgent</string>
    <string name="not_important_not_urgent">Not important, not urgent</string>
    <string name="date_filters">Date filters</string>
    <string name="today_tasks">Today tasks</string>
    <string name="tomorrow_tasks">Tomorrow tasks</string>
    <string name="today_tasks_title">TODAY TASKS</string>
    <string name="tomorrow_tasks_title">TOMORROW TASKS</string>
    <string name="all_tasks_title">ALL TASKS</string>
    <string name="important_tasks_title">IMPORTANT TASKS</string>
    <string name="urgent_tasks_title">URGENT TASKS</string>
    <string name="not_i_not_u_tasks_title">NOT IMPORTANT, NOT URGENT</string>
    <string name="title_activity_new_task">ADD TASK</string>
    <string name="enter_new_task_hint">Enter a new task...</string>
    <string name="IntroActivityTitle">Hello</string>
    <string name="settings">Settings</string>
    <string name="all_tasks">All tasks</string>
    <string name="for_today">Today:</string>

    <string name="no_tasks_notification_text">I have no tasks yet</string>
    <string name="notification_ticket">Briefing time</string>
    <string name="notification_main_text">Good day!</string>

    <string name="notification_action">notif_action</string>
    <string name="notification_expanded_title_text">Tasks:</string>
    <string name="notification_compressed_title_text">Hello, briefing time!</string>

    <string name="preference_file_key">tasker_preference_file</string>
    <string name="preference_saved_briefing_time">preference_saved_briefing_time</string>
    <string name="preference_saved_briefing_time_default">540</string>
    <string name="briefing_last_time_shown_date">briefing_last_time_shown_date</string>
</resources>
